--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="css/style.css">
+   
 </head>
    
 <body>
@@ -15,10 +17,11 @@
     
 
     <div class="header">
+    
 
         <div class="nav">
             <div class="nav__logo">
-                <h1>^PUNK^</h1>
+                <i class="fas fa-ghost"></i>
             </div>
 
 
@@ -94,7 +97,7 @@
                                 <!-- Card -->
                                 <div class="card">
                                     <div class="card__icon">
-                                        <i class="fas fa-crown"></i>
+                                        <i class="fas fa-magnet"></i>
                                     </div>
                                     <div class="card__body">
                                         <div class="card__body--title">Abstract</div>
@@ -107,7 +110,7 @@
                             <div class="col-md-4">
                                 <div class="card">
                                     <div class="card__icon">
-                                        <i class="fas fa-crown"></i>
+                                        <i class="fas fa-cube"></i>
                                     </div>
                                     <div class="card__body">
                                         <div class="card__body--title">3D</div>
@@ -118,7 +121,7 @@
                             <div class="col-md-4">
                                 <div class="card">
                                     <div class="card__icon">
-                                        <i class="fas fa-crown"></i>
+                                        <i class="fas fa-paint-brush"></i>
                                     </div>
                                     <div class="card__body">
                                         <div class="card__body--title">Paint Brush Stroke</div>
