update index page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                         <div class="title">Welcome to Punk Tatoos</div>
                         <div class="subtitle"> 
  
-                        Punk Tattoo Studio is rated as the most creative tattoo studio in Punjab by Mid Day. We are known for jaw-dropping realistic and hyper-realistic tattoos.</div>
+                        Punk Tattoo Studio is rated as the most creative tattoo studio in Punjab by Mid Day. We are known for jaw-dropping realistic and hyper-realistic tattoos.
+                    *This text added to complete hacktober contest*</div>
                             <div class="mt-5">
                                 <a class="btn btn--primary btn--rounded" href="#">Read More</a>
                             </div>
